--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "es5",
     "module": "commonjs",
     "lib": [
-      "es2015"
+      "es2015",
+      "dom", "dom.iterable", "esnext"
     ],
     "strict": true,
     "declaration": true,
