--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -13,7 +13,8 @@
     "typeRoots": [
       "../node_modules/@types",
       "./typings"
-    ]
+    ],
+//    "strictNullChecks": false
   },
   "include": [
     "./**/*"
