schema Test npm install List     "@types/node": "^12.12.7",     "ajv": "^6.10.2",     "typescript-json-schema": "^0.40.0"

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,6 +8,7 @@
     ],
     "strict": true,
     "declaration": true,
+    "noImplicitAny": false,
     "outDir": "dist",
     "sourceMap": true,
     "typeRoots": [
