--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "description": "",
   "main": "jest.config.js",
   "dependencies": {
-    "ajv": "^6.10.2",
     "jest": "^24.9.0",
     "ts-node": "^8.4.1",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.6.4",
-    "typescript-json-schema": "^0.40.0"
+    "typescript": "^3.6.4"
   },
   "devDependencies": {
     "@types/faker": "^4.1.7",
     "@types/jest": "^24.0.21",
+    "@types/node": "^12.12.7",
+    "ajv": "^6.10.2",
     "axios": "^0.19.0",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "moment": "^2.24.0",
+    "typescript-json-schema": "^0.40.0"
   },
   "scripts": {
     "test": "jest --verbose --updateSnapshot",
