--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   },
   "devDependencies": {
     "@types/faker": "^4.1.7",
-    "@types/jest": "^24.0.21",
+    "@types/jest": "^24.0.23",
+    "@types/jest-environment-puppeteer": "^4.3.1",
     "@types/node": "^12.12.7",
+    "@types/puppeteer": "^1.20.2",
     "ajv": "^6.10.2",
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "faker": "^4.1.0",
+    "jest-environment-puppeteer": "^4.3.0",
+    "jest-puppeteer": "^4.3.0",
     "moment": "^2.24.0",
-    "typescript": "^3.7.2",
+    "puppeteer": "^2.0.0",
+    "ts-json-schema-generator": "^0.56.0",
+    "typescript": "~3.6.2",
     "typescript-json-schema": "^0.40.0"
   },
   "scripts": {
